--- a/configs/mnist.yaml
+++ b/configs/mnist.yaml
@@ -1,5 +1,15 @@
-name: ClassificationTrainer
-num_epochs: 20
+trainer:
+  name: Trainer
+  num_epochs: 20
+
+dataset:
+  name: MNISTDataloader
+  root: data
+  batch_size: 256
+  num_workers: 0
+
+model:
+  name: LeNet
 
 optimizer:
   name: Adam
@@ -8,12 +18,3 @@ optimizer:
 scheduler:
   name: StepLR
   step_size: 10
-
-model:
-  name: LeNet
-
-dataset:
-  name: MNISTDataloader
-  root: data
-  batch_size: 256
-  num_workers: 8
