--- a/configs/mnist.yaml
+++ b/configs/mnist.yaml
@@ -3,7 +3,7 @@ trainer:
   num_epochs: 20
 
 dataset:
-  name: MNISTDataloader
+  name: MNISTDataLoader
   root: data
   batch_size: 256
   num_workers: 0
