--- a/configs/mnist.yaml
+++ b/configs/mnist.yaml
@@ -18,3 +18,11 @@ optimizer:
 scheduler:
   name: StepLR
   step_size: 10
+
+log_params:
+  num_epochs: ${trainer.num_epochs}
+  batch_size: ${dataset.batch_size}
+  optimizer: ${optimizer.name}
+  lr: ${optimizer.lr}
+  scheduler: ${scheduler.name}
+  step_size: ${scheduler.step_size}
