--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,6 @@ jobs:
       - name: Test
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-        run: make cover
+        run: |
+          pip install poetry
+          make cover
