--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,16 +10,19 @@ jobs:
       max-parallel: 1
       matrix:
         python-version: [3.8]
+        poetry-version: [1.1.15]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Set up Poetry
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
       - name: Test
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-        run: |
-          pip install poetry
-          make cover
+        run: make cover
