--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ codecov = "^2.1.12"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+pytorch_template = "pytorch_template.cli:main"
