--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pytorch-template"
+name = "template"
 version = "0.1.0"
 description = ""
 authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
@@ -25,4 +25,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-pytorch_template = "pytorch_template.cli:main"
+template = "template.cli:main"
