--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "^5.0.4"
 yapf = "^0.32.0"
 pytest = "^7.2.0"
 codecov = "^2.1.12"
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
