--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,12 @@ jobs:
         run: |
           pip install flake8
           flake8 --verbose .
+      - name: Set up Poetry
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+      - name: Install dependencies
+        run: poetry install
       - name: Type check
         uses: jpetrucciani/mypy-check@master
         with:
