--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,7 @@ jobs:
       max-parallel: 1
       matrix:
         python-version: [3.8]
+        poetry-version: [1.3.1]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
