--- a/.github/workflows/type_check2.yml
+++ b/.github/workflows/type_check2.yml
@@ -6,18 +6,24 @@ on:
       - '*.py'
 
 jobs:
-  mypy:
+  type-check:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        python-version: [3.8]
     steps:
-      - name: Setup Python
-        uses: actions/setup-python@v1
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.7.4
-          architecture: x64
-      - name: Checkout
-        uses: actions/checkout@v1
+          python-version: ${{ matrix.python-version }}
+
       - name: Install mypy
         run: pip install mypy
+
       - name: Run mypy
         uses: sasanquaneuf/mypy-github-action@releases/v1
         with:
