--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,13 +4,12 @@ on:
   push:
 
 jobs:
-  lint:
+  flake8:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 1
       matrix:
         python-version: [3.8]
-        poetry-version: [1.3.1]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,7 +17,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Lint
-        run: |
-          pip install flake8
-          flake8 --verbose .
+#       - name: Lint
+#         run: |
+#           pip install flake8
+#           flake8 --verbose .
+      - name: Run flake8
+        uses: suo/flake8-github-action@releases/v1
+        with:
+          checkName: 'flake8'   # NOTE: this needs to be the same as the job name
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
