--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  flake8:
+  run-flake8:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 1
@@ -24,6 +24,6 @@ jobs:
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
-          checkName: 'flake8'   # NOTE: this needs to be the same as the job name
+          checkName: 'run-flake8'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
