--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,9 +21,11 @@ jobs:
 #         run: |
 #           pip install flake8
 #           flake8 --verbose .
-      - name: Run flake8
-        uses: suo/flake8-github-action@releases/v1
-        with:
-          checkName: 'run-flake8'   # NOTE: this needs to be the same as the job name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Run flake8
+#         uses: suo/flake8-github-action@releases/v1
+#         with:
+#           checkName: 'run-flake8'   # NOTE: this needs to be the same as the job name
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: flake8 Lint
+        uses: py-actions/flake8@v2
