--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,10 +1,10 @@
-name: Lint
+name: Flake8
 
 on:
   push:
 
 jobs:
-  run-flake8:
+  flake8:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 1
@@ -21,11 +21,5 @@ jobs:
 #         run: |
 #           pip install flake8
 #           flake8 --verbose .
-#       - name: Run flake8
-#         uses: suo/flake8-github-action@releases/v1
-#         with:
-#           checkName: 'run-flake8'   # NOTE: this needs to be the same as the job name
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: flake8 Lint
         uses: py-actions/flake8@v2
