add empty notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mlflow = "^1.30.0"
 tqdm = "^4.64.1"
 loguru = "^0.6.0"
 torchmetrics = "^0.10.1"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
