--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
+          cache: 'poetry'
+      # - name: Set up Poetry
+      #   uses: abatilo/actions-poetry@v2
+      #   with:
+      #     poetry-version: ${{ matrix.poetry-version }}
       - name: Install dependencies
         run: poetry install
       - name: Test
