--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,15 +14,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Set up Poetry
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
-      # - name: Set up Poetry
-      #   uses: abatilo/actions-poetry@v2
-      #   with:
-      #     poetry-version: ${{ matrix.poetry-version }}
+          cache: poetry
       - name: Install dependencies
         run: poetry install
       - name: Test
