--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,22 +8,25 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     strategy:
       max-parallel: 1
       matrix:
         python-version: [3.8]
         poetry-version: [1.3.1]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2
+      - uses: actions/checkout@v3
+
+      - uses: abatilo/actions-poetry@v2
         with:
           poetry-version: ${{ matrix.poetry-version }}
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: poetry
+
       - name: Publish
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
