--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,25 +6,28 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     strategy:
       max-parallel: 1
       matrix:
         python-version: [3.8]
         poetry-version: [1.3.1]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2
+      - uses: actions/checkout@v3
+
+      - uses: abatilo/actions-poetry@v2
         with:
           poetry-version: ${{ matrix.poetry-version }}
-      - name: Set up Python
-        uses: actions/setup-python@v4
+
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
+
       - name: Install dependencies
         run: poetry install
+
       - name: Test
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
