--- a/.github/workflows/type_check.yml
+++ b/.github/workflows/type_check.yml
@@ -8,24 +8,23 @@ on:
 jobs:
   mypy:
     runs-on: ubuntu-latest
+
     strategy:
       max-parallel: 1
       matrix:
         python-version: [3.8]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install mypy
         run: pip install mypy
 
-      - name: Run mypy
-        uses: sasanquaneuf/mypy-github-action@releases/v1
+      - uses: sasanquaneuf/mypy-github-action@releases/v1
         with:
           checkName: 'mypy'   # NOTE: this needs to be the same as the job name
         env:
