--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,16 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: poetry
+
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pypoetry/artifacts
+            ~/.cache/pypoetry/cache
+          key: ${{ runner.os }}-pip
+          # key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pip
 
       - name: Install dependencies
         run: poetry install
