--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,10 +31,7 @@ jobs:
           path: |
             ~/.cache/pypoetry/artifacts
             ~/.cache/pypoetry/cache
-          key: ${{ runner.os }}-pip
-          # key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pip
+          key: ${{ runner.os }}-poetry
 
       - name: Publish
         env:
