--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,11 @@ numba = "^0.56.4"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
-yapf = "^0.33.0"
+black = "^23.7.0"
 toml = "^0.10.2"
 pytest = "^7.3.1"
 codecov = "^2.1.13"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
