--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [3.9]
-        poetry-version: [1.5.0]
+        python-version: ["3.9"]
+        poetry-version: ["1.6.1"]
 
     steps:
       - uses: actions/checkout@v3
