--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,26 +2,25 @@
 name = "template"
 version = "0.1.0"
 description = ""
-authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
+authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
+torchmetrics = "^0.10.1"
 omegaconf = "^2.2.3"
 mlflow = "^2.6.0"
 tqdm = "^4.64.1"
 loguru = "^0.6.0"
-torchmetrics = "^0.10.1"
-numba = "^0.56.4"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
 black = "^23.7.0"
-toml = "^0.10.2"
-pytest = "^7.3.1"
 codecov = "^2.1.13"
+flake8 = "^6.0.0"
 isort = "^5.12.0"
+pytest = "^7.3.1"
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
