--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9.16"
+python = "^3.9"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
 torchmetrics = "^0.10.1"
