--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ python = "^3.9"
 torch = "^2.1.0"
 torchvision = "^0.16.0"
 torchmetrics = "^0.10.1"
-omegaconf = "^2.2.3"
 mlflow = "^2.6.0"
 tqdm = "^4.64.1"
 loguru = "^0.6.0"
+mlconfig = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
-codecov = "^2.1.13"
+coverage = "^7.3.2"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 pytest = "^7.3.1"
