--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-torch = "^2.1.0"
-torchvision = "^0.16.0"
-torchmetrics = "^0.10.1"
+torch = "^2.1.1"
+torchvision = "^0.16.1"
+torchmetrics = "^1.2.0"
 tqdm = "^4.64.1"
 loguru = "^0.6.0"
 mlconfig = "^0.2.0"
-mlflow-skinny = "^2.8.1"
+mlflow = "^2.8.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
