--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Lint
         run: poetry run flake8 -v .
       - name: Test
-        run: poetry run pytest -v -s --cov=template --cov-report=xml tests
+        run: poetry run pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
