--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mlflow = "^2.9.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
+ruff = "^0.1.8"
 toml = "^0.10.2"
 
 [build-system]
