--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,23 +13,21 @@ jobs:
       max-parallel: 1
       matrix:
         python-version: ["3.10"]
-        poetry-version: ["1.7.1"]
     steps:
       - uses: actions/checkout@v4
-      - uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: poetry
+          cache: pip
       - uses: chartboost/ruff-action@v1
       - name: Install dependencies
         run: |
-          poetry install
-          poetry run pip install torch --extra-index-url https://download.pytorch.org/whl/cpu
+          pip install torch --extra-index-url https://download.pytorch.org/whl/cpu
+          pip install .
       - name: Test
-        run: poetry run pytest -v -s --cov=. --cov-report=xml tests
+        run: |
+          pip install pytest pytest-cov
+          poetry run pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
