--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Test
         run: |
           pip install pytest pytest-cov
-          poetry run pytest -v -s --cov=. --cov-report=xml tests
+          pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
