--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,7 @@ name: Publish
 
 on:
   push:
+    workflow_dispatch:
     tags:
       - "v*.*.*"
 
@@ -15,7 +16,7 @@ jobs:
         poetry-version: ["1.7.1"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
