--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,6 +1,7 @@
 name: Python
 
 on:
+  workflow_dispatch:
   push:
     branches: ["main"]
   pull_request:
@@ -15,7 +16,7 @@ jobs:
         python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
@@ -29,6 +30,6 @@ jobs:
           pip install pytest pytest-cov
           pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
