--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,10 @@ select = [
 
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 force-single-line = true
 
 [tool.pytest.ini_options]
