--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ select = [
     "I", # isort
     # "UP", # pyupgrade
     "W", # pycodestyle warnings
-
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -48,6 +47,8 @@ select = [
 
 [tool.ruff.lint.isort]
 force-single-line = true
+# https://github.com/astral-sh/ruff/issues/10519
+known-third-party = ["wandb"]
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::DeprecationWarning"]
