--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,21 @@ description = ""
 authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-torch = "^2.1.1"
-torchvision = "^0.16.1"
-torchmetrics = "^1.2.0"
-tqdm = "^4.66.3"
+python = "^3.11"
+torch = "^2.3.0"
+torchvision = "^0.18.0"
+torchmetrics = "^1.4.0"
+tqdm = "^4.66.4"
 loguru = "^0.7.2"
 mlconfig = "^0.2.1"
 wandb = "^0.17.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.3.1"
-pytest-cov = "^4.1.0"
-ruff = "^0.1.8"
+pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
+ruff = "^0.4.4"
 toml = "^0.10.2"
+mypy = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
