--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -14,16 +14,21 @@ jobs:
       max-parallel: 1
       matrix:
         python-version: ["3.11"]
+        poetry-version: ["1.8.3"]
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
+      - name: Install poetry
+        run: pipx install poetry==${{ matrix.poetry-version }}
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
-      - run: poetry install
-      - run: poetry run ruff check .
-      - run: poetry run pytest -v -s --cov=. --cov-report=xml tests
+      - name: Install dependencies
+        run: poetry install
+      - name: Lint
+        run: poetry run ruff check .
+      - name: Test
+        run: poetry run pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
