--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-torch = "^2.3.0"
-torchvision = "^0.18.0"
+torch = "^2.3.1"
+torchvision = "^0.18.1"
 torchmetrics = "^1.4.0"
+numpy = "^1.26.3"
 tqdm = "^4.66.4"
 loguru = "^0.7.2"
 mlconfig = "^0.2.2"
