--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,6 @@ known-third-party = ["wandb"]
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::DeprecationWarning"]
+
+[tool.mypy]
+ignore_missing_imports = true
