--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -3,9 +3,11 @@ name: Poetry
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches:
+      - main
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
 
 jobs:
   poetry:
@@ -27,6 +29,8 @@ jobs:
         run: poetry install
       - name: Lint
         run: poetry run ruff check .
+      - name: Type check
+        run: poetry run mypy --install-types --non-interactive . 
       - name: Test
         run: poetry run pytest -v -s --cov=. --cov-report=xml tests
       - name: Upload coverage reports to Codecov
