--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,9 +3,11 @@ name: Python
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches:
+      - main
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
 
 jobs:
   python:
