--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,14 @@ priority = "explicit"
 python = "^3.11"
 # torch = "^2.3.1"
 # torchvision = "^0.18.1"
-torch = { version = "^2.3.1+cu121", source = "pytorch-cu121", markers = "extra=='cuda' and extra!='cpu'" }
-torchvision = { version = "^0.18.1+cu121", source = "pytorch-cu121", markers = "extra=='cuda' and extra!='cpu'" }
+torch = [
+    { version = "^2.3.1+cu121", source = "pytorch-cu121", markers = "extra=='cuda' and extra!='cpu'" },
+    { version = "^2.3.1+cpu", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" },
+]
+torchvision = [
+    { version = "^0.18.1+cu121", source = "pytorch-cu121", markers = "extra=='cuda' and extra!='cpu'" },
+    { version = "^0.18.1+cpu", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" },
+]
 torchmetrics = "^1.4.0"
 numpy = "^1.26.3"
 tqdm = "^4.66.4"
@@ -33,13 +39,6 @@ pytest-cov = "^5.0.0"
 ruff = "^0.4.10"
 toml = "^0.10.2"
 mypy = "^1.10.0"
-
-[tool.poetry.group.cpu]
-optional = true
-
-[tool.poetry.group.cpu.dependencies]
-torch = { version = "^2.3.1+cpu", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
-torchvision = { version = "^0.18.1+cpu", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
 
 [tool.poetry.extras]
 cuda = ["torch", "torchvision"]
