--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,8 +21,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
         with:
-          path: ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-artifacts
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry
       - name: Install poetry
         run: pipx install poetry==${{ matrix.poetry-version }}
       - uses: actions/setup-python@v5
@@ -30,7 +30,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           # cache: poetry
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --sync
       - name: Lint
         run: poetry run ruff check .
       - name: Type check
