--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,11 +22,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install poetry
-        run: |
-          pip install pipx
-          pipx install poetry==${{ matrix.poetry-version }}
-          poetry env info
+          cache: pip
+      - uses: narumiruna/setup-poetry@v1
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+          cache: true
       - name: Install dependencies
         run: poetry install
       - name: Lint
