--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,36 @@
-[tool.poetry]
-name = "template"
+[project]
+name = "pytorch-template"
 version = "0.1.0"
 description = ""
-authors = ["narumi <toucans-cutouts0f@icloud.com>"]
+readme = "README.md"
+authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
+requires-python = ">=3.11"
+dependencies = [
+    "loguru>=0.7.2",
+    "mlconfig>=0.2.3",
+    "numpy>=2.1.3",
+    "torch>=2.5.1",
+    "torchmetrics>=1.5.2",
+    "torchvision>=0.20.1",
+    "tqdm>=4.67.0",
+    "wandb>=0.18.6",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-torch = "^2.3.1"
-torchvision = "^0.18.1"
-torchmetrics = "^1.4.0"
-numpy = "^1.26.3"
-tqdm = "^4.66.4"
-loguru = "^0.7.2"
-mlconfig = "^0.2.2"
-wandb = "^0.17.5"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.2"
-pytest-cov = "^5.0.0"
-ruff = "^0.5.3"
-toml = "^0.10.2"
-mypy = "^1.10.1"
+[project.scripts]
+pytorch-template = "pytorch_template.cli:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]
-template = "template.cli:main"
+[dependency-groups]
+dev = [
+    "mypy>=1.13.0",
+    "pytest>=8.3.3",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.7.3",
+    "types-pyyaml>=6.0.12.20240917",
+]
 
 [tool.ruff]
 exclude = ["build"]
