--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,20 +12,14 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-        poetry-version: ["1.8.3"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-      - uses: narumiruna/setup-poetry@v1
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-          cache: true
+          enable-cache: true
       - name: Publish
         env:
-          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
-          poetry build -f wheel
-          poetry publish
+          uv build --wheel
+          uv publish
