--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,26 +15,22 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-        poetry-version: ["1.8.3"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-      - uses: narumiruna/setup-poetry@v1
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-          cache: true
+          enable-cache: true
+      - name: Install Python
+        run: uv python install ${{ matrix.python-version }}
       - name: Install dependencies
-        run: poetry install
+        run: uv sync
       - name: Lint
-        run: poetry run ruff check .
+        run: uv run ruff check .
       - name: Type check
-        run: poetry run mypy --install-types --non-interactive . 
+        run: uv run mypy --install-types --non-interactive .
       - name: Test
-        run: poetry run pytest -v -s --cov=. --cov-report=xml tests
+        run: uv run pytest -v -s --cov=src --cov-report=xml tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
