--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ dev = [
     "pytest-cov>=6.0.0",
     "ruff>=0.7.3",
     "types-pyyaml>=6.0.12.20240917",
+    "types-redis>=4.6.0.20241004",
+    "types-requests>=2.32.0.20241016",
+    "types-six>=1.16.21.20241105",
+    "types-tabulate>=0.9.0.20240106",
 ]
 
 [tool.ruff]
