--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "torchmetrics>=1.5.2",
     "torchvision>=0.20.1",
     "tqdm>=4.67.0",
+    "typer>=0.15.2",
     "wandb>=0.19.9",
 ]
 
@@ -29,11 +30,6 @@ dev = [
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.7.3",
-    "types-pyyaml>=6.0.12.20240917",
-    "types-redis>=4.6.0.20241004",
-    "types-requests>=2.32.0.20241016",
-    "types-six>=1.16.21.20241105",
-    "types-tabulate>=0.9.0.20240106",
 ]
 
 [tool.ruff]
