--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ dev = [
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.7.3",
+    "types-pyyaml>=6.0.12.20250402",
+    "types-redis>=4.6.0.20241004",
+    "types-requests>=2.32.0.20250328",
+    "types-six>=1.17.0.20250304",
+    "types-tabulate>=0.9.0.20241207",
 ]
 
 [tool.ruff]
