--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,8 +3,10 @@ name: Docker
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
+    tags:
+      - "v*.*.*"
 
 jobs:
   docker:
