--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,3 +66,9 @@ filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.bumpversion]
+current_version = "0.1.1"
+tag = true
+commit = true
+pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]
