--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -31,10 +31,7 @@ jobs:
           BUMPVERSION_TAG: "true"
         with:
           args: ${{ inputs.bump-type }}
-          # Create a personal access token https://github.com/settings/tokens
-          # Add your role to bypass list in the branch protection settings
-          # github-token: ${{ secrets.GH_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
       - name: Check
         if: steps.bump.outputs.bumped == 'true'
         run: |
