--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,54 @@
 [project]
 name = "pytorchtemplate"
-version = "0.1.0"
+version = "0.0.0"
 description = ""
 readme = "README.md"
-authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
 requires-python = ">=3.12"
+authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
 dependencies = [
-    "loguru>=0.7.2",
-    "mlconfig>=0.2.3",
-    "numpy>=2.1.3",
-    "torch>=2.5.1",
-    "torchmetrics>=1.5.2",
-    "torchvision>=0.20.1",
-    "tqdm>=4.67.0",
-    "typer>=0.15.2",
-    "wandb>=0.19.9",
+  "loguru>=0.7.3",
+  "mlconfig>=0.3.2",
+  "numpy>=2.4.1",
+  "torch>=2.10.0",
+  "torchmetrics>=1.8.2",
+  "torchvision>=0.25.0",
+  "tqdm>=4.67.1",
+  "typer>=0.21.1",
+  "wandb>=0.24.0",
 ]
 
 [project.scripts]
 pytorchtemplate = "pytorchtemplate.cli:main"
 
+[dependency-groups]
+dev = [
+  "mypy>=1.19.1",
+  "pip>=25.3",
+  "pytest>=9.0.2",
+  "pytest-cov>=7.0.0",
+  "ruff>=0.14.14",
+  "types-pyyaml>=6.0.12.20250915",
+  "types-redis>=4.6.0.20241004",
+  "types-requests>=2.32.4.20260107",
+  "types-six>=1.17.0.20251009",
+  "types-tabulate>=0.9.0.20241207",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
-dev = [
-    "mypy>=1.13.0",
-    "pip>=25.0.1",
-    "pytest>=8.3.3",
-    "pytest-cov>=6.0.0",
-    "ruff>=0.7.3",
-    "types-pyyaml>=6.0.12.20250402",
-    "types-redis>=4.6.0.20241004",
-    "types-requests>=2.32.0.20250328",
-    "types-six>=1.17.0.20250304",
-    "types-tabulate>=0.9.0.20241207",
-]
+[tool.bumpversion]
+current_version = "0.1.1"
+tag = true
+commit = true
+pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]
+
+[tool.mypy]
+ignore_missing_imports = true
+
+[tool.pytest]
+filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.ruff]
 exclude = ["build"]
@@ -44,15 +56,15 @@ line-length = 120
 
 [tool.ruff.lint]
 select = [
-    "B",   # flake8-bugbear
-    "C",   # flake8-comprehensions
-    "E",   # pycodestyle errors
-    "F",   # pyflakes
-    "I",   # isort
-    "N",   # pep8-naming
-    "SIM", # flake8-simplify
-    "UP",  # pyupgrade
-    "W",   # pycodestyle warnings
+  "B",  # flake8-bugbear
+  "C",  # flake8-comprehensions
+  "E",  # pycodestyle errors
+  "F",  # pyflakes
+  "I",  # isort
+  "N",  # pep8-naming
+  "SIM",  # flake8-simplify
+  "UP",  # pyupgrade
+  "W",  # pycodestyle warnings
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -60,15 +72,3 @@ select = [
 
 [tool.ruff.lint.isort]
 force-single-line = true
-
-[tool.pytest.ini_options]
-filterwarnings = ["ignore::DeprecationWarning"]
-
-[tool.mypy]
-ignore_missing_imports = true
-
-[tool.bumpversion]
-current_version = "0.1.1"
-tag = true
-commit = true
-pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]
