migrate type checker from mypy to ty

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Install dependencies
         run: uv sync
       - name: Lint
-        run: uv run ruff check .
+        run: uv run ruff check
       - name: Type check
-        run: uv run mypy --install-types --non-interactive .
+        run: uv run ty check
       - name: Test
         run: uv run pytest -v -s --cov=src --cov-report=xml tests
       - name: Upload coverage reports to Codecov
